--- a/code/Tourism/Telecom.TourismUI/Views/Home/Index.cshtml
+++ b/code/Tourism/Telecom.TourismUI/Views/Home/Index.cshtml
@@ -9,13 +9,13 @@
 }
 <div class="jumbotron">
     <h1 class="test">Telecom.TourismUI</h1>
-    <h1>@(ViewBag.TestValue)</h1>
+    <h1>@ViewBag.TestValue</h1>
 </div>
 @section Scripts{
     <script src="@(jsPath)App.js"></script>
     <script>
         $(function() {
-            alert(app.SiteConfig.ResourcesUrl);
+            console.log("ResourcesUrl:" + app.SiteConfig.ResourcesUrl);
         })
     </script>
 }
